--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
 						<h2>相關圖片</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/Base/01.jpg" class="image fit thumb"><img src="images/Base/thumbs/01.jpg" alt="" /></a>
 								<h3>校園剪影1</h3>
 								<p>這是個地點</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="images/Base/02.jpg" class="image fit thumb"><img src="images/Base/thumbs/02.jpg" alt="" /></a>
 								<h3>校園剪影2</h3>
 								<p>這是個地點</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="images/Base/03.jpg" class="image fit thumb"><img src="images/Base/thumbs/03.jpg" alt="" /></a>
 								<h3>校園剪影3</h3>
 								<p>這是個地點</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/Base/04.jpg" class="image fit thumb"><img src="images/Base/thumbs/04.jpg" alt="" /></a>
 								<h3>校園剪影4</h3>
 								<p>這是個地點</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="images/Base/05.jpg" class="image fit thumb"><img src="images/Base/thumbs/05.jpg" alt="" /></a>
 								<h3>校園剪影5</h3>
 								<p>這是個地點</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="images/Base/06.jpg" class="image fit thumb"><img src="images/Base/thumbs/06.jpg" alt="" /></a>
 								<h3>校園剪影6</h3>
 								<p>這是個地點</p>
 							</article>
